--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
       - name: Make a GET request to a URL
         id: init
         run: |
@@ -21,7 +22,23 @@ jobs:
           year=$(echo "$response" | jq -r '.year')
           echo "semester=$semester" >> $GITHUB_ENV
           echo "year=$year" >> $GITHUB_ENV
+          
       - name: Print semester and year
         run: |
           echo "semester=${{ env.semester }}"
           echo "year=${{ env.year }}"
+          
+      - name: Set semester and year in script
+        uses: actions/github-script@v4
+        with:
+          script: |
+            const fs = require('fs');
+            const filePath = '${{ github.workspace }}/script/courseSearch.py';
+            let fileContent = fs.readFileSync(filePath, 'utf8');
+            fileContent = fileContent.replace(/semester = '.+'/g, `semester = '${{ env.semester }}'`);
+            fileContent = fileContent.replace(/year = '.+'/g, `year = '${{ env.year }}'`);
+            fs.writeFileSync(filePath, fileContent);
+            
+      - name: Print updated file contents
+        run: |
+          cat script/courseSearch.py
