--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -48,19 +48,15 @@ jobs:
           git config --global user.name "ridemountainpig"
           git config --global user.email "lin0905580802@gmail.com"
           
-      - name: Check if there are changes
+      - name: Commit and push changes
         run: |
           if git diff-index --quiet HEAD --; then
-            echo "No changes to commit."
-            exit 0
+            echo "No changes detected."
           else
-            echo "Changes detected, committing and pushing."
+            git add .
+            git commit -m "update: update course year and semester"
           fi
-          
-      - name: Commit changes
-        run: |
-          git add .
-          git commit -m "feat: change course year and semester"
+        continue-on-error: true
           
       - name: Push changes
         uses: ad-m/github-push-action@master
