--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -1,12 +1,9 @@
 name: Init course system year and semester
 
 on:
-  push:
-    branches: [ initYearAndSemester-actions-dev ]
+  schedule:
+    - cron: '0 */6 * * *'
 
-# on:
-#   schedule:
-#     - cron: '0 */6 * * *'
 jobs:
   make-request:
     runs-on: ubuntu-latest
@@ -61,5 +58,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          branch: initYearAndSemester-actions-dev
+          branch: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
