--- a/.github/workflows/curl-deploy.yml
+++ b/.github/workflows/curl-deploy.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+        
       - name: Make a GET request to a URL
         run: |
           curl https://fcu-course-search.ridemountainpig.repl.co/GITPULL
