--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Make a GET request to a URL
         id: init
         run: |
-          response=$(curl -s https://fcu-course-search.ridemountainpig.repl.co/initYearAndSemester)
+          response=$(curl -s https://fcu-course-search.repl.co/initYearAndSemester)
           semester=$(echo "$response" | jq -r '.semester')
           year=$(echo "$response" | jq -r '.year')
           echo "semester=$semester" >> $GITHUB_ENV
