--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -1,6 +1,8 @@
 name: Init course system year and semester
 
 on:
+  push: 
+    branches: [workflow-dev]
   schedule:
     - cron: '0 */24 * * *'
   workflow_dispatch:
@@ -35,38 +37,38 @@ jobs:
           echo "semester=${{ env.semester }}"
           echo "year=${{ env.year }}"
           
-      - name: Set semester and year in script
-        uses: actions/github-script@v4
-        with:
-          script: |
-            const fs = require('fs');
-            const filePath = '${{ github.workspace }}/script/courseSearch.py';
-            let fileContent = fs.readFileSync(filePath, 'utf8');
-            fileContent = fileContent.replace(/semester = '.+'/g, `semester = '${{ env.semester }}'`);
-            fileContent = fileContent.replace(/year = '.+'/g, `year = '${{ env.year }}'`);
-            fs.writeFileSync(filePath, fileContent);
+      # - name: Set semester and year in script
+      #   uses: actions/github-script@v4
+      #   with:
+      #     script: |
+      #       const fs = require('fs');
+      #       const filePath = '${{ github.workspace }}/script/courseSearch.py';
+      #       let fileContent = fs.readFileSync(filePath, 'utf8');
+      #       fileContent = fileContent.replace(/semester = '.+'/g, `semester = '${{ env.semester }}'`);
+      #       fileContent = fileContent.replace(/year = '.+'/g, `year = '${{ env.year }}'`);
+      #       fs.writeFileSync(filePath, fileContent);
             
-      - name: Print updated file contents
-        run: |
-          cat script/courseSearch.py
+      # - name: Print updated file contents
+      #   run: |
+      #     cat script/courseSearch.py
           
-      - name: Configure git
-        run: |
-          git config --global user.name "ridemountainpig"
-          git config --global user.email "lin0905580802@gmail.com"
+      # - name: Configure git
+      #   run: |
+      #     git config --global user.name "ridemountainpig"
+      #     git config --global user.email "lin0905580802@gmail.com"
           
-      - name: Commit and push changes
-        run: |
-          if git diff-index --quiet HEAD --; then
-            echo "No changes detected."
-          else
-            git add .
-            git commit -m "update: update course year and semester"
-          fi
-        continue-on-error: true
+      # - name: Commit and push changes
+      #   run: |
+      #     if git diff-index --quiet HEAD --; then
+      #       echo "No changes detected."
+      #     else
+      #       git add .
+      #       git commit -m "update: update course year and semester"
+      #     fi
+      #   continue-on-error: true
           
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          branch: main
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Push changes
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     branch: main
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
