--- a/.github/workflows/initYearAndSemester.yml
+++ b/.github/workflows/initYearAndSemester.yml
@@ -3,6 +3,7 @@ name: Init course system year and semester
 on:
   schedule:
     - cron: '0 */24 * * *'
+  workflow_dispatch:
 
 jobs:
   make-request:
@@ -22,13 +23,20 @@ jobs:
           response=$(curl -s https://fcu-course-search.zeabur.app/initYearAndSemester)
           semester=$(echo "$response" | jq -r '.semester')
           year=$(echo "$response" | jq -r '.year')
+          url=$(echo "$response" | jq -r '.url')
+          if [ -z "$semester" ] && [ -z "$year" ]; then
+            echo "Error: Missing semester and year. Exiting workflow."
+            exit 1
+          fi
           echo "semester=$semester" >> $GITHUB_ENV
           echo "year=$year" >> $GITHUB_ENV
+          echo "url=$url" >> $GITHUB_ENV
           
       - name: Print semester and year
         run: |
           echo "semester=${{ env.semester }}"
           echo "year=${{ env.year }}"
+          echo "url=${{ env.url }}"
           
       - name: Set semester and year in script
         uses: actions/github-script@v4
